# mmcp

./: LICENSE  README.md  pyproject.toml
src/mmcp/: __init__.py  cli.py  utils.py
src/mmcp/template/: Dockerfile.jinja2  README.md.jinja2  app.py.jinja2  docker-compose.yml.jinja2  server.py.jinja2
src/mmcp/template/services/: __init__.py  tools.py
src/mmcp/template/tests/: test_mmcp_list_tools.py
src/mmcp/template/tools/: base.py  weather.py
